promjenio sam homepage

--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -24,7 +24,7 @@
 
                 <div class="navibar color-red">
                         <ul>
-                                <li><a href="#" class="home-green">HOMEPAGE</a></li>
+                                <li><a href="#" class="home-green">home dva</a></li>
                                 <li><a href="#">STYLE DEMO</a></li>
                                 <li><a href="#">FULL WIDTH</a></li>
                                 <li><a href="#">PORTFOLIO</a></li>
