dosao sam do ove cetiri slike i texta ispod text me malo zeza kako da ga ubacim

--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -17,14 +17,12 @@
         </div>
 
         <div class="logo">
-                <h1 style="margin-left: 10px; display: inline-block; color: white;">A
-                </h1>
-                <h2 style="display: inline-block; color: white;">LLROUNDER
-                </h2>
+                <h1>A</h1>
+                <h2>LLROUNDER</h2>
 
-                <div class="navibar color-red">
+                <div class="navibar">
                         <ul>
-                                <li><a href="#" class="home-green">home dva</a></li>
+                                <li><a href="#" class="selected">HOMEPAGE</a></li>
                                 <li><a href="#">STYLE DEMO</a></li>
                                 <li><a href="#">FULL WIDTH</a></li>
                                 <li><a href="#">PORTFOLIO</a></li>
@@ -41,13 +39,40 @@
         </div>
 
         <hr>
+<div class="slider">
+        <img src="slider\img_nature_wide.jpg">
+        <img class="leftarrov" src="slider\leftarrow.png">
+        <img class="rightarrov" src="slider\rightarrow.png">
         
-        
-        <button class="button">bla bla bla</button>
-        <button class="button button-primary">22222222</button>
-        <button class="button">33333333</button>
 
-        <div></div>
+</div>
+
+<div class="naslov">
+        <h2>“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam<br> 
+                erat. In fringilla massa ut nisi ullamcorper pellentesque „</h2>
+</div>
+
+<!-- nije mi jasno kako da ovu liniju ide u spic na coskovima -->
+<hr class="silver">
+
+<div class="latestwork">
+        <div class="latestwork1">
+                <img src="latestwork\skoda.png"width="225"; height="140">
+                <a>Indonectetus facilis</a>
+                <div class="latestwork2">
+                                <img src="latestwork\skoda.png"width="225"; height="140">
+                        <div class="latestwork3">
+                                        <img src="latestwork\skoda.png"width="225"; height="140">
+                                <div class="latestwork4">
+                                                <img src="latestwork\skoda.png"width="225"; height="140">
+
+                                </div>
+                        </div>
+                </div>
+        </div>
+
+</div>
+
 </body>
 
 </html>
