--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -75,8 +75,11 @@
         </div>
 
 </div>
+</div>  
 <div class="services">
         <div class="services-left"></div>
+        <a>Lorem Ipsum Dolor</a>
+        <a>Indonectetus facilis<br> Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</a>
         <div class="services-right"></div>
 </div>
 
