--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -53,20 +53,20 @@
 </div>
 
 <!-- nije mi jasno kako da ovu liniju ide u spic na coskovima -->
-<hr class="silver">
+<hr class="silver"></hr>
 
 <div class="latestwork">
         <div class="latestwork1">
-                <img src="latestwork\skoda.png"width="225"; height="140">
+                <img src="latestwork\skoda.png">
                 <a>Indonectetus facilis <br>Dignissimmorbi rhoncus sed netus ligula conseque netus nulla aliquat id dui fermentumnec.</a>
                 <div class="latestwork2">
-                                <img src="latestwork\skoda.png"width="225"; height="140">
+                                <img src="latestwork\skoda.png">
                                 <a>Indonectetus facilis <br>Dignissimmorbi rhoncus sed netus ligula conseque netus nulla aliquat id dui fermentumnec.</a>
                         <div class="latestwork3">
-                                        <img src="latestwork\skoda.png"width="225"; height="140">
+                                        <img src="latestwork\skoda.png">
                                         <a>Indonectetus facilis <br>Dignissimmorbi rhoncus sed netus ligula conseque netus nulla aliquat id dui fermentumnec.</a>
                                 <div class="latestwork4">
-                                                <img src="latestwork\skoda.png"width="225"; height="140">
+                                                <img src="latestwork\skoda.png">
                                                 <a>Indonectetus facilis <br>Dignissimmorbi rhoncus sed netus ligula conseque netus nulla aliquat id dui fermentumnec.</a>
 
                                 </div>
@@ -77,10 +77,16 @@
 </div>
 </div>  
 <div class="services">
-        <div class="services-left"></div>
-        <a>Lorem Ipsum Dolor</a>
-        <a>Indonectetus facilis<br> Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</a>
-        <div class="services-right"></div>
+        <div class="services-left">
+                <h4>Lorem Ipsum Dolor</h4>
+                <img src="services\rog.jpg"><p>Indonectetus facilis <br>Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</p>
+                <img src="services\rog.jpg"><p>Indonectetus facilis <br>Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</p>
+        </div>
+        <div class="services-right">
+                <img src="services\rog.jpg"><p>Indonectetus facilis <br>Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</p>
+                <img src="services\rog.jpg"><p>Indonectetus facilis <br>Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</p>
+        
+        </div>
 </div>
 
 
