--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -87,8 +87,15 @@
                 <img src="services\rog.jpg"><p>Indonectetus facilis <br>Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</p>
         
         </div>
-</div>
 
+</div>
+<div class="content">
+        <div class="content-left">
+                <h4>Lorem Ipsum Dolor</h4>
+        <img src="services\Silhouette.png">
+        <img src="services\Silhouette.png">
+        </div>
+</div>
 
 </body>
 
