moramo opet sjesti

--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -79,6 +79,7 @@
 <div class="services">
         <div class="services-left">
                 <h4>Lorem Ipsum Dolor</h4>
+                <a class="more" href="#">View more</a>
                 <img src="services\rog.jpg"><p>Indonectetus facilis <br>Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</p>
                 <img src="services\rog.jpg"><p>Indonectetus facilis <br>Vestibulu maccumsan ege stibulum eu justo convallis aug ue estas aenean elit intes que sed. Facili spede estib ulum.</p>
         </div>
@@ -92,9 +93,45 @@
 <div class="content">
         <div class="content-left">
                 <h4>Lorem Ipsum Dolor</h4>
+                <a class="more" href="#">View more</a>
         <img src="services\Silhouette.png">
         <img src="services\Silhouette.png">
         </div>
+</div>
+
+<div class="about">
+        <div class="about-left">
+                <h6>ABOUT US</h6>
+                <img src="services\rog.jpg">
+                <a>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Nunc<br> non diam erat. In fringilla massa ut<br> nisi ullamcorper pellentesque.<br> Quisque non luctus sem. </a>
+                <a href="#">View more</a>
+
+
+
+                <div class="about-right">
+                                <h6>LINK BLOCK</h6>
+                        <div class="link">
+                                <ul>
+                                        <li><a href="#">Lorem ipsum dolor sit</li></a>
+                                        <li><a href="#">Amet consectetur</li></a>
+                                        <li><a href="#">Praesent vel sem id</li></a>
+                                        <li><a href="#">Curabitur hendrerit est</li></a>
+                                        <li><a href="#">Aliquam eget erat nec sapien</li></a>
+                                        <li><a href="#">Cras id augue nunc</li></a>
+                                        <li><a href="#">In nec justo non</li></a>
+                                        <li><a href="#">Vivamus mollis enim ut</li></a>
+                                        <li><a href="#">Curabitur hendrerit est</li></a>
+                                </ul>
+
+
+
+                        </div>
+                        
+                        
+
+                </div>
+        </div>
+
 </div>
 
 </body>
