--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -101,15 +101,14 @@
 
 <div class="about">
         <div class="about-left">
-                <h6>ABOUT US</h6>
+                <p>ABOUT US</p>
                 <img src="services\rog.jpg">
                 <a>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Nunc<br> non diam erat. In fringilla massa ut<br> nisi ullamcorper pellentesque.<br> Quisque non luctus sem. </a>
                 <a href="#">View more</a>
-
-
+        </div>
 
                 <div class="about-right">
-                                <h6>LINK BLOCK</h6>
+                                <p>LINK BLOCK</p>
                         <div class="link">
                                 <ul>
                                         <li><a href="#">Lorem ipsum dolor sit</li></a>
