--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -154,6 +154,13 @@
         </div>        
 
 </div>
+<div class="footer">
+        <div class="footer-left">
+                <p>Copyright © 2013 - All Rights Reserved - Domain Name</p>
+        <div class="footer-right">
+                <p class="footer-right">Template by OS Templates</p>
+        </div>
+</div>
 
 
 
