--- a/ceta site/index.html
+++ b/ceta site/index.html
@@ -157,6 +157,8 @@
 <div class="footer">
         <div class="footer-left">
                 <p>Copyright © 2013 - All Rights Reserved - Domain Name</p>
+        
+        </div>
         <div class="footer-right">
                 <p class="footer-right">Template by OS Templates</p>
         </div>
