--- a/test-project 2/index.html
+++ b/test-project 2/index.html
@@ -85,6 +85,36 @@
             </button>
         </div>
     </div>
+    <div>
+        <hr>
+    </div>
+    <div class="social-conect">
+        <div class="social">
+            <p class="title-social">Social Connection</p>
+            <hr class="line-dots">
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+            <img src="images\sig.png">
+            <img src="images\facebook.png">
+            <img src="images\in.png">
+            <img src="images\youtube.png">
+            <img src="images\tviter.png">
+            <p class="title-social">Newsletter</p>
+            <hr class="line-dots">
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+            <label for="email"></label>
+            <input type="text" placeholder="your email address" name="email" required>
+            <button class="btn-blue">
+                <div class="text-btn-blue">Subscribe</div> 
+                <span class="float-right title-cube">&#8594;</span>
+            </button>
+        </div>
+        <div class="cube-center cube-left">
+            <p class="title-social">Contact</p>
+        </div>
+        <div class="news">
+
+        </div>
+    </div>
 </body>
 
 </html>
