--- a/test-project 2/index.html
+++ b/test-project 2/index.html
@@ -7,112 +7,172 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="logo">
-            <a href="#">
-                <img src="images\logo.png"></a>
-        </div>
-        <div class="navi-menu">
-            <ul>
-                <li>
-                    <a href="#">HOME</a>
-                </li>
-                <li>
-                    <a href="#">PRODUCTS</a>
-                </li>
-                <li>
-                    <a href="#">SERVICES</a>
-                </li>
-                <li>
-                    <a href="#">BLOG</a>
-                </li>
-                <li>
-                    <a href="#">CONTACT</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="slider">
-        <img src="images\slider1.jpg">
-    </div>
-    <div class="naslov">
-        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
-    </div>
-    <div>
-        <hr>
-    </div>
-    <div class="main-cube">
-        <div class="cube-left">
-            <p class="title-cube">Perfect Logic</p>
-            <p class="small-title">All you want your website to do.</p>
-            <img class="pic1" src="images\cube1.png">
-            <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo.
-            </p>
-            <button class="cube-btn">
-                <span class="text-btn">Learn more</span>
-                <span class="float-right title-cube">&#8594;</span>
-            </button>
-        </div>
-        <div class="cube-center cube-left">
-            <p class="title-cube">Perfect Logic</p>
-            <p class="small-title">All you want your website to do.</p>
-            <img class="pic1" src="images\cube1.png">
-            <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo.
-            </p>
-            <button class="cube-btn">
-                <span class="text-btn">Learn more</span>
-                <span class="float-right title-cube">&#8594;</span>
-            </button>
-        </div>
-        <div class="cube-left">
-            <p class="title-cube">Perfect Logic</p>
-            <p class="small-title">All you want your website to do.</p>
-            <img class="pic1" src="images\cube1.png">
-            <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo.
-            </p>
-            <button class="cube-btn">
-                <span class="text-btn">Learn more</span>
-                <span class="float-right title-cube">&#8594;</span>
-            </button>
-        </div>
-    </div>
-    <div>
-        <hr>
-    </div>
-    <div class="social-conect">
-        <div class="social">
-            <p class="title-social">Social Connection</p>
-            <hr class="line-dots">
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
-            <img src="images\sig.png">
-            <img src="images\facebook.png">
-            <img src="images\in.png">
-            <img src="images\youtube.png">
-            <img src="images\tviter.png">
-            <p class="title-social">Newsletter</p>
-            <hr class="line-dots">
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
-            <label for="email"></label>
-            <input type="text" placeholder="your email address" name="email" required>
-            <button class="btn-blue">
-                <div class="text-btn-blue">Subscribe</div> 
-                <span class="float-right title-cube">&#8594;</span>
-            </button>
-        </div>
-        <div class="cube-center cube-left">
-            <p class="title-social">Contact</p>
-        </div>
-        <div class="news">
-
+    <div class="full-width">
+        <div class="margi-page">
+                <div class="back-slider">
+                    </div>
+            <div class="header">
+                <div class="logo">
+                    <a href="#">
+                        <img src="images\logo.png"></a>
+                </div>
+                <div class="navi-menu">
+                    <ul>
+                        <li>
+                            <a href="#">HOME</a>
+                        </li>
+                        <li>
+                            <a href="#">PRODUCTS</a>
+                        </li>
+                        <li>
+                            <a href="#">SERVICES</a>
+                        </li>
+                        <li>
+                            <a href="#">BLOG</a>
+                        </li>
+                        <li>
+                            <a href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="slider">
+                <img src="images\slider1.jpg">
+            </div>
+            <div class="naslov">
+                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
+            </div>
+            <div>
+                <hr>
+            </div>
+            <div class="main-cube">
+                <div class="cube-left">
+                    <p class="title-cube">Perfect Logic</p>
+                    <p class="small-title">All you want your website to do.</p>
+                    <img class="pic1" src="images\cube1.png">
+                    <p>
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam
+                        rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+                        sunt
+                        explicabo.
+                    </p>
+                    <button class="cube-btn">
+                        <span class="text-btn">Learn more</span>
+                        <span class="float-right title-cube">&#8594;</span>
+                    </button>
+                </div>
+                <div class="cube-center cube-left">
+                    <p class="title-cube">Perfect Logic</p>
+                    <p class="small-title">All you want your website to do.</p>
+                    <img class="pic1" src="images\cube1.png">
+                    <p>
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam
+                        rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+                        sunt
+                        explicabo.
+                    </p>
+                    <button class="cube-btn">
+                        <span class="text-btn">Learn more</span>
+                        <span class="float-right title-cube">&#8594;</span>
+                    </button>
+                </div>
+                <div class="cube-left">
+                    <p class="title-cube">Perfect Logic</p>
+                    <p class="small-title">All you want your website to do.</p>
+                    <img class="pic1" src="images\cube1.png">
+                    <p>
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam
+                        rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+                        sunt
+                        explicabo.
+                    </p>
+                    <button class="cube-btn">
+                        <span class="text-btn">Learn more</span>
+                        <span class="float-right title-cube">&#8594;</span>
+                    </button>
+                </div>
+            </div>
+            <div>
+                <hr>
+            </div>
+            <div class="social-conect">
+                <div class="social">
+                    <p class="title-social">Social Connection</p>
+                    <hr class="line-dots">
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                    <img src="images\sig.png">
+                    <img src="images\facebook.png">
+                    <img src="images\in.png">
+                    <img src="images\youtube.png">
+                    <img src="images\tviter.png">
+                    <p class="title-social">Newsletter</p>
+                    <hr class="line-dots">
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                    <label for="email"></label>
+                    <input type="text" placeholder="your email address" name="email" required>
+                    <button class="btn-blue">
+                        <div class="text-btn-blue">Subscribe</div>
+                        <span class="float-right title-cube">&#8594;</span>
+                    </button>
+                </div>
+                <div class="contact">
+                    <p class="title-social">Contact</p>
+                    <hr class="line-dots">
+                    <form>
+                        <input type="text" placeholder="your name" name="firstname">
+                        <input type="text" placeholder="your email address" name="email">
+                        <input type="text" placeholder="message" name="comment" style="height:139px;">
+                    </form>
+                    <button class="btn-blue">
+                        <div class="text-btn-blue">Send it</div>
+                        <span class="float-right title-cube">&#8594;</span>
+                </div>
+                <div class="news">
+                    <p class="title-social">News Updates</p>
+                    <hr class="line-dots">
+                    <p><img src="images\mozila.png">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore magna aliqua. </p>
+                    <hr class="line-dots-news">
+                    <p><img src="images\buble.png">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam
+                        rem aperiam.</p>
+                    <hr class="line-dots-news">
+                    <p><img src="images\line.png">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
+                    <hr class="line-dots-news">
+                    <button class="btn-blue">
+                        <div class="text-btn-blue">Send it</div>
+                        <span class="float-right title-cube">&#8594;</span>
+                </div>
+            </div>
+            <hr class="line-fut">
+            <div class="footer">
+                    <div class="f-left">
+                        <p> Site Powered by Wordpress. Design and Developed by VIVROCKS.</p>
+                        <div class="sec-nav">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Products</a></li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                        <span class="colf">Privacy polici terms of use</span>
+                    </div>
+                    <p class="f-right">&copy; 2010 Studio VIVROCKS. All Rights Reserved.<p>
+            </div>
         </div>
     </div>
 </body>
