--- a/test-project3/index.html
+++ b/test-project3/index.html
@@ -144,7 +144,11 @@
         <div class="footer-contact">
             <p>CONTACT US</p>
             <form action="input">
-                
+                <input type="text" id="fname" name="firstname" placeholder="Name">
+                <input type="email" id="email" name="email" placeholder="Email">
+                <input type="text" id="subject" name="subject" placeholder="Subject">
+                <textarea id="subject" name="subject" placeholder="Subject"></textarea>
+                <input class="send" type="submit" value="Submit">
             </form>
         </div>
     </div>
