--- a/test-project 4/index.html
+++ b/test-project 4/index.html
@@ -89,7 +89,13 @@
             <a class="text-center">LATEST WORK</a>
         </div>
         <hr class="over-line">
-
+    </div>
+    <div class="latestimg">
+        <img src="pic/1.jpg">
+        <img src="pic/2.jpg">
+        <img src="pic/3.jpg">
+    </div>
+        
 
 </body>
 
