ako moze pomoc oko footera

--- a/test-project 4/index.html
+++ b/test-project 4/index.html
@@ -73,17 +73,17 @@
         </div>
         <div class="textabout">
             <p class="textabout"><b>Name:</b>John Doe<br>Justo convallis augue estas aenean elit intesque sed
-                facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>        
+                facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>
             <p class="textabout"><b>Name:</b>John Doe<br>Justo convallis augue estas aenean elit intesque sed
-                facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>        
+                facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>
             <p class="textabout"><b>Name:</b>John Doe<br>Justo convallis augue estas aenean elit intesque sed
-                facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>        
+                facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>
             <p class="textabout"><b>Name:</b>John Doe<br>Justo convallis augue estas aenean elit intesque
-                sed facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>        
+                sed facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>
             <p class="textabout"><b>Name:</b>John Doe<br>Justo convallis augue estas aenean elit
-                intesque sed facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>        
+                intesque sed facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>
             <p class="textabout"><b>Name:</b>John Doe<br>Justo convallis augue estas aenean elit
-                intesque sed facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>        
+                intesque sed facilispede estibulum nulla.<a class="readmore" href="#">View profile</a></p>
         </div>
         <div class="ourservice">
             <a class="text-center">LATEST WORK</a>
@@ -95,7 +95,23 @@
         <img src="pic/2.jpg">
         <img src="pic/3.jpg">
     </div>
-        
+    <div class="footer">
+        <div class="footer-width">
+            <div class="blog-post">
+                <p>Latest from the blog</p>
+                <img class="slika1" src="pic/1.jpg">Convallisijusto vestas mus pellentum aeneansa pibu lum in aliquam volut pat integest nulla. Acsed sed
+                nunc at fring maurisusce at elis ut vitae laorem.
+                <img class="slika2" src="pic/2.jpg">Convallisijusto vestas mus pellentum aeneansa pibu lum in aliquam volut pat integest nulla. Acsed sed
+                nunc at fring maurisusce at elis ut vitae laorem.
+            </div>
+            <div class="company-details">
+
+            </div>
+            <div class="contact-us">
+
+            </div>
+        </div>
+    </div>
 
 </body>
 
